# miniredis

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
config/: miniredis.conf  miniredis.prod.conf
deploy/: install.sh  miniredis.env.example  miniredis.service
docs/: architecture.md  benchmark-report.md  cluster.md  concurrency.md  demo-guide.md  interview-guide.md  ops-runbook.md  replication.md  testing-benchmark.md  usage.md
include/miniredis/cluster/: cluster_config_store.hpp  cluster_utils.hpp  slot_map.hpp
include/miniredis/core/: logger.hpp  memory_pool.hpp  thread_pool.hpp
include/miniredis/metrics/: http_stats.hpp  stats.hpp
include/miniredis/net/: scheduler.hpp
include/miniredis/persistence/: append_only_file.hpp  file_persistence.hpp
include/miniredis/server/: command_handler.hpp  config.hpp  failover_coordinator.hpp  replication_backlog.hpp  replication_dispatcher.hpp  replication_state.hpp  server.hpp
miniredis/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  vcpkg.json
miniredis/.github/workflows/: ci.yml
miniredis/build-qt/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  miniredis  miniredis_unit_tests
miniredis/build-qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
miniredis/build-qt/tools/qt_console/: Makefile  cmake_install.cmake  miniredis_qt_console
miniredis/build-qt/tools/qt_console/miniredis_qt_console_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
miniredis/build-qt/tools/qt_console/miniredis_qt_console_autogen/EWIEGA46WW/: moc_monitor_window.cpp  moc_monitor_window.cpp.d  moc_resp_client.cpp  moc_resp_client.cpp.d  moc_stats_client.cpp  moc_stats_client.cpp.d
miniredis/config/: miniredis.conf
miniredis/deploy/: backup.sh  miniredis.service
miniredis/deploy/logrotate/: miniredis
miniredis/docs/: architecture.md  benchmark-report.md  cluster.md  concurrency.md  interview-guide.md  platform.md  production-deploy.md  replication.md  testing-benchmark.md  usage.md
miniredis/include/: cache_store.hpp  consistent_hash.hpp  http_stats.hpp  memory_pool.hpp  persistence_manager.hpp  resp_parser.hpp  scheduler.hpp  stats.hpp
miniredis/include/miniredis/cluster/: mysql_client.hpp  slot_map.hpp
miniredis/include/miniredis/core/: cache_store.hpp  snapshot.hpp  thread_pool.hpp
miniredis/include/miniredis/metrics/: stats.hpp
miniredis/include/miniredis/net/: resp_parser.hpp  scheduler.hpp
miniredis/include/miniredis/persistence/: append_only_file.hpp  file_persistence.hpp  persistence_manager.hpp
miniredis/include/miniredis/platform/: platform.hpp
miniredis/include/miniredis/server/: command_handler.hpp  config.hpp  replication_backlog.hpp  replication_dispatcher.hpp  server.hpp
miniredis/scripts/: benchmark.sh  check_platform_build.sh  cluster_demo.sh  recovery_soak.sh  replica_demo.sh
miniredis/src/: cache_store.cpp  consistent_hash.cpp  file_persistence.cpp  http_stats.cpp  memory_pool.cpp  mysql_client.cpp  persistence_manager.cpp  resp_parser.cpp  scheduler.cpp  stats.cpp  thread_pool.cpp
miniredis/src/cluster/: cluster_config_store.cpp  cluster_utils.cpp  consistent_hash.cpp  mysql_client.cpp  slot_map.cpp
miniredis/src/core/: cache_store.cpp  logger.cpp  memory_pool.cpp  thread_pool.cpp
miniredis/src/metrics/: http_stats.cpp  stats.cpp
miniredis/src/net/: resp_parser.cpp  scheduler.cpp
miniredis/src/persistence/: append_only_file.cpp  file_persistence.cpp  persistence_manager.cpp
miniredis/src/server/: command_handler.cpp  config.cpp  replication_dispatcher.cpp  server.cpp
miniredis/tests/: unit_tests.cpp
miniredis/tests/integration/: smoke.sh
miniredis/tools/qt_console/: main.cpp  monitor_window.cpp  monitor_window.hpp  resp_client.cpp  resp_client.hpp  stats_client.cpp  stats_client.hpp
scripts/: benchmark.sh  cluster_demo.sh  failover_demo.sh  package_release.sh  replica_demo.sh  resource_failure_soak.sh
src/cluster/: slot_map.cpp
src/core/: cache_store.cpp
src/metrics/: stats.cpp
src/net/: resp_parser.cpp  scheduler.cpp
src/persistence/: persistence_manager.cpp
src/server/: command_handler.cpp  config.cpp  failover_coordinator.cpp  replication_dispatcher.cpp  replication_state.cpp  server.cpp
tests/: unit_tests.cpp
tests/integration/: smoke.sh
tools/qt_console/: CMakeLists.txt  monitor_window.cpp  monitor_window.hpp  resp_client.cpp  resp_client.hpp
